# minkops-ai

./: .gitignore  CLAUDE.md  CODEOWNERS  README.md  decisions-log.md  ruff.toml
agents/: README.md  info.txt  pyproject.toml
agents/general/sarah/src/: playground.ipynb
agents/src/agents/general/imel/: __init__.py  graph.py  nodes.py  policy.py  prompts.py  state.py  tools.py
agents/src/agents/general/kall/: graph.py  nodes.py  state.py  tools.py
agents/src/agents/shared/: clients.py  db.py  kb.py  schemas.py  utils.py
apps/corporate-website/: README.md  index.html  main.py  pyproject.toml
apps/corporate-website/api/: main.py  pyproject.toml
apps/corporate-website/api/backend/: README.md  package.json  run.py
apps/corporate-website/api/backend/app/: __init__.py  main.py  routes.py
apps/corporate-website/api/backend/src/: index.ts
db/: additional_metrics.sql  bootstrap.sql  init_agents_db.sql  init_app.sql  init_warehouse.sql  schema.sql
db/init/: 01_schema.sql  02_base_table_enrichment.sql
db/synthetic/: additional_metrics.sql  (+2 more)
docs/: brand-guidelines.md  decisions-log.md  top-layer-onboarding-transition.md
infra/: README.md  compose.yml  docker-compose.yml
services/ai-suite/: .env.example  README.md  main.py  playground.ipynb  pyproject.toml  temp.txt
services/ai-suite/ai_suite/: __init__.py  cli.py  config.py
services/ai-suite/ai_suite/capabilities/: __init__.py  email.py  postgres.py
services/ai-suite/ai_suite/persistence/: __init__.py  monitor.py  seed.py
services/ai-suite/ai_suite/runtime/: __init__.py  adapters.py  registry.py  runner.py
services/ai-suite/all_legacy_code/notebooks/: age_gender_training.ipynb  gpt2_training.ipynb  gpt3_training.ipynb  ir_training.ipynb  main.ipynb  ner_training.ipynb
services/ai-suite/all_legacy_code/requirements/: requirements.txt
services/ai-suite/all_legacy_code/src/: __init__.py  audio_mgmt.py  face_mgmt.py  main.py  nlp.py
services/ai-suite/all_legacy_code/src/legacy/: legacy.py  main_legacy.py
services/ai-suite/all_legacy_code/src/preprocess/: audio_prep.py  image_prep.py  ner_prep.py  text_prep.py
services/ai-suite/all_legacy_code/src/training_and_prediction/: models.py  predict.py
transform/: .dockerignore  .gitignore  Dockerfile  dbt_project.yml  main.py  packages.yml  profiles.yml  pyproject.toml  requirements.txt
(+118 files in other folders)
