[project]
name = "ai-suite"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "agents",
    "dotenv>=0.9.9",
    "ipykernel>=7.1.0",
    "jupyter>=1.1.1",
    "langchain>=1.2.0",
    "langchain-openai>=1.1.6",
    "langgraph>=1.0.5",
    "ollama>=0.6.1",
]

[tool.uv.sources]
agents = { path = "../../agents", editable = true }
